# fence-service

./: Cargo.toml  build.rs
proto/: cursor.proto  displays.proto  fence.proto
src/: main.rs
src/lib/: mod.rs
src/lib/def/: config.rs  display.rs  state.rs
src/lib/file/: mod.rs  saving.rs  statics.rs
src/lib/grpc/: cursor_manager.rs  display_manager.rs  mod.rs
src/lib/hooks/: windows.rs
