[package]
name = "fence-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fence-service"
path = "src/main.rs"

[dependencies]
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
once_cell = "1.15.0"

[build-dependencies]
tonic-build = "0.8"
