[package]
name = "fence-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fence-service"
path = "src/main.rs"

[dependencies]
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "1.21.2", features = ["full"] }
once_cell = "1.15.0"
directories = "4.0.1"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.windows]
version = "0.42.0"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_Threading"
]

[build-dependencies]
tonic-build = "0.8"
